@@ -167,6 +167,7 @@ debian-installer (20050630) UNRELEASED; urgency=low
   * Add real alternatives for virtual glibc-pic build-dependency.
   * Remove powerpc-builtin-initrd.sh and corresponding bzip2
     build-dependency on powerpc; we use mkvmlinuz everywhere now.
+  * Keep modules.alias in udev/hotplug builds; new coldplug udev needs it.
 
   [ Frans Pop ]
   * Fix logic error in build/util/pkg-list to get rid of incorrect warnings
